--- a/styles/style.scss
+++ b/styles/style.scss
@@ -6,14 +6,14 @@ body {
 
 @font-face {
   font-family: 'Inter Tight';
-  src: url("/fonts/InterTight-Regular.ttf") format("truetype");
+  src: url("../fonts/InterTight-Regular.ttf") format("truetype");
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Inter Tight';
-  src: url("/fonts/InterTight-Bold.ttf") format("truetype");
+  src: url("../fonts/InterTight-Bold.ttf") format("truetype");
   font-weight: 700;
   font-style: normal;
 }
